tests/invalid/SetDefine_Invalid_1.whiley
type intlist is {int}

method main() -> int:
    intlist il = {1, 2, 3}
    return il[0]
